samples/_failures_safe/1761364514_26e304_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3475f6c9.c: In function ‘main’:
./samples/SAFE/__tmp_3475f6c9.c:180:9: error: expected declaration or statement at end of input
  180 |         printf("Compressed (%zu bytes):\n", compressed.size);
      |         ^~~~~~
./samples/SAFE/__tmp_3475f6c9.c:180:9: error: expected declaration or statement at end of input
